<resources>
    <string name="app_name">MAT Calc</string>
    <string name="x">x</string>
    <string name="mat_calc">MAT Calc</string>
    <string name="developer_details">Developer details</string>
    <string name="amortization">Amortization</string>
    <string name="compound_interest">Compound Interest</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="regression_analysis">Regression Analysis</string>
    <string name="correlation">Correlation</string>
    <string name="measure_of_dispersion">Measure of Dispersion</string>
    <string name="central_tendency">Central Tendency</string>
    <string name="frequency_distribution">Frequency Distribution</string>
    <string name="fibonacci_sequence">Fibonacci Sequence</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="enter_term_number">Enter term number:</string>
    <string name="_34">34</string>
    <string name="calculate">Calculate</string>
    <string name="back">Back</string>
    <string name="enter_observed_data">Enter observed data:</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="class_interval">Class Interval</string>
    <string name="f">f</string>
    <string name="lcb">LCB</string>
    <string name="ucb">UCB</string>
    <string name="cm">CM</string>
    <string name="moreCF"><![CDATA[>CF]]></string>
    <string name="lessCF"><![CDATA[<CF]]></string>
    <string name="relative_frequency">Relative Frequency</string>
    <string name="total">TOTAL</string>
    <string name="use_data_in_central_tendency">Use data in Central Tendency</string>
    <string name="classes">Classes</string>
    <string name="fx">fx</string>
    <string name="_10_19">10–19</string>
    <string name="add_row">Add Row</string>
    <string name="remove_row">Remove Row</string>
    <string name="reset">Reset</string>
    <string name="enter_data_set">Enter data set:</string>
    <string name="x_x">(x-x̄)</string>
    <string name="x_x2">(x-x̄)²</string>
    <string name="y">y</string>
    <string name="x2">x²</string>
    <string name="y2">y²</string>
    <string name="xy">xy</string>
    <string name="test_prediction">Test prediction:</string>
    <string name="predict">Predict</string>
    <string name="enter_the_principal">Enter the principal:</string>
    <string name="enter_the_rate">Enter the rate:</string>
    <string name="enter_time_in_months">Enter time in months:</string>
    <string name="t">t</string>
    <string name="r">r</string>
    <string name="p">P</string>
    <string name="compound_frequency">Compound frequency:</string>
    <string name="enter_time_in_years">Enter time in years:</string>
    <string name="payment_frequency">Payment frequency:</string>
    <string name="balance">Balance</string>
    <string name="repayment">Repayment</string>
    <string name="interest">Interest</string>
    <string name="periodic">Periodic</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">—</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="del">⌫</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">＝</string>
    <string name="multiply">×</string>
    <string name="c">C</string>
    <string name="backspace">←</string>
    <string name="about_me">About Me</string>
    <string name="info_me">I am John Milky Basuel, a second year Bachelor of Science in Computer Science as of August 2023. Studying at PHINMA University of Pangasinan College Urdaneta located in Urdaneta City, Pangasinan, Philippines. I made this application as a personal project with the intention of helping students like me and/or anyone who needs it in solving specific mathematical equations.</string>
    <string name="contact_me">Contact me</string>
    <string name="facebook">facebook.com/kingjohn.basuel</string>
    <string name="facebook_profile">Facebook profile:</string>
    <string name="number">+639163097406</string>
    <string name="contact_number">Contact number:</string>
    <string name="email">johnmilkyb@gmail.com</string>
    <string name="email_address">Email address:</string>
</resources>