<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Menu">

    <TextView
        android:id="@+id/tv_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/asset"
        android:text="@string/mat_calc"
        android:textColor="#000000"
        android:textSize="34sp" />

    <ScrollView
        android:id="@+id/sv_Menu"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_Credit"
        android:layout_below="@id/tv_Name"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/basic_calculator"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Fibonacci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/fibonacci_sequence"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_FDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/frequency_distribution"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Central"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/central_tendency"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Dispersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/measure_of_dispersion"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Correlation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/correlation"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Regression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/regression_analysis"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Simple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/simple_interest"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Compound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/compound_interest"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Amortization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/home_buttons"
                android:padding="15dp"
                android:text="@string/amortization"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_Credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/developer_details"
        android:textColor="#191919"
        android:textSize="16sp"
        android:textStyle="italic" />

</RelativeLayout>